@@ -64,6 +64,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3085: Errors and lacks in document "Built In Functions" (miyakawataku via cheolsoo)
+
 PIG-3084: Improve exceptions messages in POPackage (julien)
 
 PIG-3072: Pig job reporting negative progress (knoguchi via rohini)
